syntax = "proto3";

package api.provider;

option go_package="github.com/synerex/synerex_alpha/api/simulation/provider";
import "simulation/agent/agent.proto";
import "simulation/area/area.proto";

message RegistWorkerRequest {
    Provider provider = 1;
}

message RegistWorkerResponse {
}

message KillProviderRequest {
    Provider provider = 1;
}

message KillProviderResponse {
}

message DivideProviderRequest {
    Provider provider = 1;
}

message DivideProviderResponse {
}


message UpdateProvidersRequest {
	repeated Provider providers = 1;
}

message UpdateProvidersResponse {
}

message SendProviderStatusRequest {
	Provider provider = 1;
}

message SendProviderStatusResponse {
}

// Gatewayのコネクション完了要求
message SetProvidersRequest {
	repeated Provider providers = 1;
}

message SetProvidersResponse {
}

// Gatewayへのプロバイダ送信要求
message GetProvidersRequest {
}

message GetProvidersResponse {
	repeated Provider providers = 1;
}


message Provider {
	uint64 id = 1;
	string name = 2;
    ProviderType type = 3;
	ProviderStatus status = 4;
	string synerex_address = 5;
	oneof data {
		ScenarioStatus scenario_status = 6;
		AgentStatus agent_status = 7;
		VisualizationStatus visualization_status = 8;
		ClockStatus clock_status = 9;
	}
}

message ProviderStatus {
	uint64 total_time = 1;
	uint64 com_time = 2;
	uint64 lc_time = 3;
}


enum ProviderType {
    NODE_ID = 0;
    SYNEREX = 1;
	MONITOR = 2;
    SCENARIO = 3;
	AGENT = 4;
	VISUALIZATION = 5;
	CLOCK = 6;
	GATEWAY = 7;
}

message ScenarioStatus {
}

message AgentStatus {
	area.Area area = 1;
    agent.AgentType agent_type = 2;
	uint64 agent_num = 3;
}

message VisualizationStatus {
}

message ClockStatus {
}






